--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Ne-er-Do-Well_5405
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Beach, Rex
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/4000
     wikipedia: http://en.wikipedia.org/wiki/Rex_Beach
 description: Cover -- Contents.
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/5405#The-Ne-er-Do-Well
 gutenberg_bookshelf: Movie Books
 gutenberg_issued: '2004-04-01'
 gutenberg_type: Text
